# gcta

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  CommFunc.cpp  CommFunc.h  Makefile.am  Makefile.bak  Makefile.in  Makefile.orig.in  Makefile_bak  Makefile_orig.in  NEWS  README.txt  StatFunc.cpp  StatFunc.h  aclocal.m4  config.h.in  configure  configure.ac  configure.lineno  configure.scan  data.cpp  est_hsq.cpp  gcta.h  grm.cpp  gwas_simu.cpp  ld.cpp  ltmain.sh  option.cpp  raw_geno.cpp
.github/workflows/: check.yaml  codeql.yml
m4/: ax_check_allocated_ctime.m4  ax_check_gnu_make.m4  ax_cxx_compile_stdcxx_0x.m4  ax_cxx_header_stdcxx_0x.m4  cmake.m4  libtool.m4  ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4  regex.m4
